objects/LAT_Mecanica__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Mecanica__c</fullName>
        <inlineHelpText>Se a Mecânica for padrão, não informar nada neste campo.</inlineHelpText>
        <label>Descrição Mecânica</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_PromotionalAction__c</fullName>
        <label>Ação Promocional</label>
        <referenceTo>LAT_PromotionalAction__c</referenceTo>
        <relationshipName>Mecanicas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Mecânica</label>
    <nameField>
        <label>Mecânica</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mecânicas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>